# Python-for-Machine-Learning

./: .gitignore  .gitmodules  .pdm-python  .python-version  README.md  ait-ml-base.Dockerfile  docker-compose.yml  mlflow.Dockerfile  pyproject.toml  python.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  mlflow.Dockerfile
.devcontainer/python/: devcontainer.json  docker-compose.yml  dockerfile  start.sh
00 - Case Study/: 01 - Case Study - Regression.ipynb  02 - Case Study - Classification.ipynb  Further Study - Cross Validation.ipynb
00 - Case Study/code-along/: 01 - Life_Expectancy.ipynb  01 - Loan Prediction.ipynb  01 - PMDS regression.ipynb  02 - Medical-Insurance.ipynb  03 - Stroke.ipynb  chaky.chakysupermodel
00 - Case Study/lab/: Workshop - Car Price.ipynb
01 - Regression/: 01 - Linear Regression from Scratch.ipynb  02 - Closed Form.ipynb  03 - Stochastic and Mini-Batch Gradient Descent.ipynb
01 - Regression/Appendix: Sklearn/: Linear Regression using Sklearn.ipynb  Other Regressions using Sklearn.ipynb
01 - Regression/case-studies/: Case Study - Life Expectancy.ipynb
02 - Unsupervised/: Example - GMM.ipynb
03 - Clustering/: 01 - K-Means.ipynb  02 - GMM.ipynb
04 - Dimensionality Reduction/: 02 - PCA using SVD.ipynb
04 - RL/: 1. PPO.ipynb  PPO.ipynb
Prerequisites/: 0 - Course Notations.ipynb  0 - Installation - Python in container.md  0 - Installation - Python project with `uv`.md  0 - Installation - Virtual Env.md  0 - Installation.md  0 - Linear Algebra with Python.ipynb  0 - Statistics with Python.ipynb
(+180 files in other folders)
