[project]
name = "AIT-ML"
version = "0.1.0"
description = ""
authors = [
    {name = "Chaklam Silpasuwanchai", email = "chaklam@ait.asia"},
    {name = "Akraradet Sinsamersuk", email = "akraradets@gmail.com"},
]
dependencies = [
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.1.post1",
    "ppscore>=1.1.0",
    "scikit-learn>=1.5.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "setuptools>=72.2.0",
    "mlflow>=1.27.0",
    "ipykernel>=6.29.5",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
]
